Fix slider buttons on mobile ios, and mobile catalog menu

--- a/src/blocks/components/menu/_menu.scss
+++ b/src/blocks/components/menu/_menu.scss
@@ -393,6 +393,12 @@
       overflow-y: auto;
     }
   }
+
+  & .icon-back {
+    @include md-block {
+      display: none;
+    }
+  }
 }
 
 .icon-back {
