--- a/src/blocks/components/slider-brands/_slider-brands.scss
+++ b/src/blocks/components/slider-brands/_slider-brands.scss
@@ -2,7 +2,7 @@
   margin-top: 10px;
   margin-bottom: 10px;
   text-align: center;
-  padding: 0 8px;
+  padding: 0 18px;
 
   @include md-block {
     margin-top: 40px;
@@ -39,29 +39,22 @@
 
   & .slider-button {
     position: absolute;
-    width: 10px;
-    height: 14px;
+    width: 20px;
+    height: 100%;
     z-index: 1;
-    background-size: cover;
     top: 0;
     bottom: 0;
     margin: auto;
     cursor: pointer;
     background: url(icon-arrow-triangle-square(474747)) no-repeat center;
-    background-size: contain;
+    background-size: 10px 14px;
 
     &.prev {
-      left: 10px;
-      @include md-block {
-        left: 0;
-      }
+      left: 0;
     }
 
     &.next {
-      right: 10px;
-      @include md-block {
-        right: 0;
-      }
+      right: 0;
     }
   }
 }
