--- a/src/blocks/components/top-list/_top-list.scss
+++ b/src/blocks/components/top-list/_top-list.scss
@@ -263,23 +263,22 @@
 
   & .slider-button {
     position: absolute;
-    width: 8px;
-    height: 16px;
+    width: 24px;
+    height: 24px;
     z-index: 1;
-    background-size: cover;
+    background-size: 8px 16px;
     top: auto;
-    bottom: 9px;
+    bottom: 8px;
     margin: auto;
     cursor: pointer;
     background: url(icon-arrow-triangle('D9D9D9')) no-repeat center;
-    background-size: cover;
 
     &.prev {
-      left: 26px;
+      left: 10px;
     }
 
     &.next {
-      right: 26px;
+      right: 10px;
     }
   }
 }
