--- a/src/blocks/modules/header/_header.scss
+++ b/src/blocks/modules/header/_header.scss
@@ -1,5 +1,5 @@
 .header {
-
+  background: #fff;
   &__top {
     display: none;
     padding: 10px 0;
