--- a/src/styles/general/_base.scss
+++ b/src/styles/general/_base.scss
@@ -226,3 +226,11 @@ body .uni-panel-sort {
     margin-right: 0;
   }
 }
+
+.fixed {
+	top: 0;
+	left: 0;
+	position: fixed;
+	width: 100%;
+	z-index: 100;
+}
